# sddmm

./: .gitignore  .gitmodules  .zenodo.json  BT.txt  CITATION.cff  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  data.txt  data2.txt  experiment_type.txt  results.txt
results/: Cache experiment [Release]__tsR-50_tsI-30_tsC-60_dsR-512_dsI-512_dsC-512_nIt-50_[Fri Nov 17 18-23-12 2023].txt  Cache experiment [Release]__tsR-50_tsI-30_tsC-60_dsR-512_dsI-512_dsC-512_nIt-50_[Fri Nov 17 18-29-39 2023].txt  Comparison Benchmark of Algorithms based on Sparsity__vs4-es4__[NxK,KxM]Had[NxM]N1000_M1000_K1000_sparsity-0.9_iters-10_cpu-t-17_[Fri Nov 24 09-41-26 2023].txt  Comparison Benchmark of Algorithms based on Sparsity__vs4-es4__[NxK,KxM]Had[NxM]N1000_M1000_K1000_sparsity-0.9_iters-10_cpu-t-17_[Fri Nov 24 09-54-45 2023].txt  Comparison Benchmark of Algorithms based on Sparsity__vs4-es4__[NxK,KxM]Had[NxM]N1000_M1000_K1000_sparsity-0.9_iters-10_cpu-t-17_[Fri Nov 24 10-22-30 2023].txt  Comparison Benchmark of Algorithms based on Sparsity__vs4-es4__[NxK,KxM]Had[NxM]N1000_M1000_K1000_sparsity-0.9_iters-10_cpu-t-17_[Fri Nov 24 10-27-28 2023].txt  Comparison Benchmark of Algorithms based on Sparsity__vs4-es4__[NxK,KxM]Had[NxM]N1000_M1000_K1000_sparsity-0.9_iters-10_cpu-t-17_[Fri Nov 24 10-31-43 2023].txt  Serial unrolling benchmark 2 [Release]_tsR-50_tsI-30_tsC-60_dsR-512_dsI-1024_dsC-384_nIt-100_[Sun_Nov_12_13:04:48_2023].txt  Serial unrolling benchmark 2_tsR-50_tsI-30_tsC-60_dsR-512_dsI-1024_dsC-384_nIt-100_[Sun_Nov_12_13:02:11_2023].txt  Serial unrolling benchmark_tsR-50_tsI-30_tsC-60_dsR-1000_dsI-1500_dsC-2000_nIt-10_[Sat_Nov_11_15:38:04_2023].txt  Types benchmarks__rTS0_cTS0_rNum8192_cNum2048_nIt250_[Mon Nov 13 15-37-49 2023].txt  Types benchmarks__rTS0_cTS0_rNum8192_cNum2048_nIt50_[Fri Nov 17 15-13-05 2023].txt  Vec vs PP vs C benchmarks [Release]__rTS0_cTS0_rNum5000_cNum5000_nIt50_[Fri Nov 17 13-11-41 2023].txt  Vec vs PP vs C benchmarks [Release]__rTS0_cTS0_rNum5000_cNum5000_nIt50_[Fri Nov 17 13-19-33 2023].txt  Vec vs PP vs C benchmarks [Release]__rTS0_cTS0_rNum5000_cNum5000_nIt50_[Fri Nov 17 16-00-54 2023].txt  Vec vs PP vs C benchmarks__rTS0_cTS0_rNum1000_cNum1000_nIt100_[Mon Nov 13 20-08-09 2023].txt  Vec vs PP vs C benchmarks__rTS0_cTS0_rNum1000_cNum1000_nIt100_[Mon Nov 13 20-10-39 2023].txt  Vec vs PP vs C benchmarks__rTS0_cTS0_rNum5000_cNum5000_nIt50_[Fri Nov 17 12-41-07 2023].txt  Vec vs PP vs C benchmarks__rTS0_cTS0_rNum8192_cNum2048_nIt250_[Mon Nov 13 16-30-46 2023].txt  data.py  err_plot_1.py  err_plot_2.py  err_plot_3.py  err_plot_loop_unrolling 2.py  err_plot_loop_unrolling.py  err_plot_storage_type.py  err_plot_types.py  err_plot_vec_vs_arr.py  parallel_sddmm__[NxK,KxM]Had[NxM]N500_M500_K400_sparsity-0.1_iters-50_cpu-t-1_[Sat Nov 18 19-11-03 2023].txt  plots.py  quantile_reg_plot_numthread.py  quantile_reg_plot_sparsity.py  sddmm_test__vs8-es4__iters-100_[Tue_Dec_12_08-17-51_2023].txt  sddmm_test__vs8-es4__iters-100_[Tue_Dec_12_08-20-03_2023].txt  sddmm_test__vs8-es4__iters-100_[Tue_Dec_12_08-20-23_2023].txt  sddmm_test__vs8-es4__iters-100_[Tue_Dec_12_08-20-39_2023].txt  test_benchmark<NxK,KxM>Had<NxM>N500_M500_K800_sparsity-0.1_iters-100_cpu-t-24_[Fri_Nov_10_15:47:03_2023].txt  test_benchmark<NxK,KxM>Had<NxM>N500_M500_K800_sparsity-0.1_iters-10_cpu-t-24_[Fri_Nov_10_14:13:30_2023].txt  test_benchmark<NxK,KxM>Had<NxM>N500_M500_K800_sparsity-0.1_iters-2_cpu-t-32_[Thu_Nov__9_23:20:25_2023].txt  test_benchmark<NxK,KxM>Had<NxM>N500_M500_K800_sparsity-0.1_iters-50_cpu-t-24_[Fri_Nov_10_15:29:07_2023].txt
results/analysis/: data.py  my_plots.py  plots.py
results/other_results/: Cache experiment [Release]__tsR-50_tsI-30_tsC-60_dsR-512_dsI-512_dsC-512_nIt-50_[Fri Nov 17 18-27-47 2023].txt  GPU cache__vs4-es4___xrNum128_xyiNum128_ycNum128_nIt10_[Fri Nov 24 09-31-17 2023].txt  Serial unrolling benchmark [Release]__tsR-50_tsI-30_tsC-60_dsR-512_dsI-1024_dsC-384_nIt-100_[Sun Nov 12 02-22-30 2023].txt  Serial unrolling benchmark__tsR-50_tsI-30_tsC-60_dsR-512_dsI-1024_dsC-384_nIt-100_[Sat Nov 11 18-59-27 2023].txt  Types benchmarks [Release]__rTS0_cTS0_rNum8192_cNum2048_nIt50_[Fri Nov 17 15-11-19 2023].txt  Vec vs PP vs C benchmarks [Release]__rTS0_cTS0_rNum5000_cNum5000_nIt50_[Fri Nov 17 12-43-02 2023].txt  Vec vs PP vs C benchmarks [Release]__rTS0_cTS0_rNum5000_cNum5000_nIt50_[Fri Nov 17 12-57-51 2023].txt  Vec vs PP vs C benchmarks [Release]__rTS0_cTS0_rNum5000_cNum5000_nIt50_[Fri Nov 17 15-45-39 2023].txt  Vec vs PP vs C benchmarks__rTS0_cTS0_rNum10000_cNum1000_nIt250_[Mon Nov 13 21-38-59 2023].txt  (+21 more)
sddmm_data/: create_data_sets-companions.bat  create_data_sets.bat  create_sparsity_large_2.bat  create_sparsity_small.bat  generate_all_images.bat  init.py  readme.txt  run_all_benchmarks.bat
src/: CMakeLists.txt  GPU_SDDMMBenchmarks.cpp  create_img.cpp  data_gen.cpp  data_gen_mat_market.cpp  data_gen_mat_market_companion.cpp  data_to_img.cpp  defines.h  main.cpp  matplotlibcpp.h  plot_sample.cpp  results.h  statistics_test_data.cpp
src/algos/: CMakeLists.txt  algo.h  algo_sample.cpp  coo.h  cuda_sample.cpp  cuda_sddmm.cpp  cuda_sddmm.cu  cuda_sddmm.cuh  lib_sample.h  naive.cpp  naive_sddmm.cpp  parallel_sddmm.cpp  sample_algo.cpp  tiled.cpp  tiled_rc_sddmm.cpp  tiled_sddmm.cpp
src/algos/cpu_sddmm/: naive_sddmm.cpp  parallel_cpu_sddmm.cpp  parallel_sddmm.cpp  parallel_sddmm_prototypes.cpp  sample_algo.cpp  tiled_sddmm.cpp
src/algos/cuda_mat_mult/: cuda_tiled_mat_mult.cpp  cuda_tiled_mat_mult.cu  cuda_tiled_mat_mult.cuh
src/algos/cuda_sddmm/: cuda_sddmm.cpp  cuda_sddmm.cu  cuda_sddmm.cuh
src/algos/cuda_tiled_sddmm/: cuda_tiled_sddmm.cpp  cuda_tiled_sddmm.cu  cuda_tiled_sddmm.cuh
src/algos/cusparse_sddmm/: cusparse_1.cpp
src/algos/sample/: cuda_sample.cpp  cuda_sample.cu  cuda_sample.cuh
src/algos/sm-l2-sddmm/: sm-l2-gpu.cu  sm-l2-gpu.cuh  sm-l2-sddmm.cpp
tests/: cuda_example_tests.cpp  cuda_tests.cpp  cuda_tiled_sddmm_tests.cpp  file_storage_tests.cpp  huge_file_mm_market_test.cpp  huge_file_tests.cpp  random_tests.cpp  sm_l2_tests.cpp  test_helpers.hpp  tests.cpp
(+303 files in other folders)
